# eurotech-hackathon

./: .dockerignore  .gitignore  AGENTS.md  BUSINESS_VIDEO.md  COMPANIES.md  DEMO.md  HONESTY.md  LEROBOT.md  README.md  VIDEO_SCRIPT.md  brainstorming.md  docker-compose.yml  pyproject.toml  run_act.sh  run_smolvla.sh  smolvla_inference.py
archive/: ACT_IMPLEMENTATION.md  COMPANIES.md  DEMO_SCRIPT.md  PITCH.md  README.robotum.md  RISK_ANALYSIS.md  TECH_VIDEO.md  ideas.md  instructions.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: captions.py  chat.py  datasets.py  lerobot.py  medicines.py  patients.py  prescriptions.py  robot_ws.py  sessions.py
backend/app/services/: caption_engine.py  claude_client.py  data_store.py  lerobot_store.py  rerun_export.py  robot_proxy.py
configs/: config.yaml
data/: active.json  common_drugs.csv  common_interactions.csv  patients.json  prescriptions.json
demo/: README.md  requirements.txt  rerun_demo.py
demo_clips/: blue_ext.vtt  red_ext.vtt
dump/: rest.yaml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
hpc/: install.slurm  push_checkpoint.slurm  setup.sh  sync.sh  train_act.slurm  train_act_h200.slurm  train_smolvla.slurm
presentation_assets/: README.md
robot_bridge/: pyproject.toml
robot_bridge/app/: lerobot_adapter.py  main.py
robot_bridge/motions/: waypoints.yaml
scripts/: deploy.py  finetune_act.py  finetune_smolvla.py  record.py  replay.py  rl_vlm_f_labeler.py  run_svla.py  save_pose.py  teleoperate.py  train.py
(+68 files in other folders)
