[project]
name = "eurotech-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"lerobot[aloha,pusht,feetech]",
	"hydra-core",
	"rerun-sdk>=0.26.2",
	"transformers>=4.57.6",
	"num2words>=0.5.14",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
