[project]
name = "dispensr-backend"
version = "0.1.0"
description = "Dispensr platform backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "httpx>=0.27",
    "websockets>=13",
    "pydantic>=2.8",
    "pandas>=2.2",
    "pyarrow>=16",
    "python-multipart>=0.0.9",
]
